# SnakeGame

./: CMakeLists.txt  ReadME.txt  main.cpp
inc/: Animations.hpp  Menu.hpp
src/: Animations.cpp  Menu.cpp
